Implement correct generic arguments matcher